<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tipodeletra"
        android:textSize="@dimen/tvTitle_textSize"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/tvTitle" />


    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints="text"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etMessage" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btMessage" />
</LinearLayout>
