<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".ViewMessageActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tvAuthor_textSize"
        android:text="@string/tvAuthor"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/tvMessage_textSize"
        android:text="@string/tvMessage"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/tvImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:contentDescription="@string/tvImage"
        app:srcCompat="@drawable/baseline_mode_comment_24" />
</LinearLayout>